--- a/MessagesApp/packages.config
+++ b/MessagesApp/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="BCrypt-Official" version="0.1.109" targetFramework="net461" />
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net461" />
-  <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
-  <package id="MaterialDesignThemes" version="2.5.1" targetFramework="net461" />
-  <package id="Prism.Core" version="7.1.0.431" targetFramework="net461" />
-  <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net461" />
+  <package id="MaterialDesignColors" version="1.2.0" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="2.6.0" targetFramework="net461" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.0.1" targetFramework="net461" />
+  <package id="Prism.Core" version="7.2.0.1367" targetFramework="net461" />
+  <package id="Prism.Wpf" version="7.2.0.1367" targetFramework="net461" />
   <package id="System.Data.SqlClient" version="4.6.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
